--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -52,6 +53,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.5",
     "@types/yup": "^0.29.11",
+    "dotenv": "^8.2.0",
     "sweetalert": "^2.1.2"
   }
 }
