--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.21.1",
+    "immer": "^8.0.0",
+    "inner": "^0.2.0",
     "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
